[package]
name = "parse-image"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["json"] }
tempdir = "0.3.7"
tokio = { version = "1.11.0", features = ["full"] }
error-chain = "0.12.4"
tempfile = "3.2.0"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
